--- a/backend-ai/requirements.txt
+++ b/backend-ai/requirements.txt
@@ -1,29 +1,48 @@
-fastapi==0.110.0
-uvicorn[standard]==0.27.1
-pydantic==2.6.1
-pydantic-settings==2.1.0
-python-multipart==0.0.9
+# Core
+fastapi>=0.115.6
+uvicorn[standard]>=0.34.0
+pydantic>=2.10.4
+pydantic-settings>=2.7.0
+python-multipart>=0.0.9
 
 # AI Services
-google-generativeai==0.3.2
-azure-cognitiveservices-speech==1.35.0
-azure-storage-blob==12.19.0
+openai>=1.59.0
+google-generativeai>=0.8.3
+azure-cognitiveservices-speech>=1.42.0
+azure-storage-blob>=12.19.0
 
 # Audio Processing
-librosa==0.10.1
-soundfile==0.12.1
-pydub==0.25.1
+librosa>=0.10.2
+soundfile>=0.12.1
+pydub>=0.25.1
 numpy>=1.26.0
 
-# Background/Async & Caching
-redis==5.0.1
-aiocache==0.12.2
-diskcache==5.6.3
-aiohttp==3.9.3
-httpx==0.26.0
+# ML/NLP
+nltk>=3.8.1
+
+# Database
+asyncpg>=0.29.0
+sqlalchemy>=2.0.25
+
+# Background Jobs
+celery>=5.3.6
+redis>=5.0.1
+
+# Caching
+aiocache>=0.12.2
+diskcache>=5.6.3
+
+# HTTP
+httpx>=0.26.0
+aiohttp>=3.9.3
+requests>=2.31.0
 
 # Monitoring & Logging
-structlog==24.1.0
-sentry-sdk[fastapi]==1.40.0
-tenacity==8.2.3
-prometheus-client==0.19.0
+structlog>=24.1.0
+sentry-sdk[fastapi]>=1.40.0
+prometheus-client>=0.19.0
+tenacity>=8.2.3
+
+# Testing
+pytest>=8.0.0
+pytest-asyncio>=0.23.4
