--- a/backend-ai/requirements.txt
+++ b/backend-ai/requirements.txt
@@ -8,6 +8,7 @@ python-multipart>=0.0.9
 # AI Services
 openai>=1.59.0
 google-generativeai>=0.8.3
+google-cloud-texttospeech>=2.17.0
 azure-cognitiveservices-speech>=1.42.0
 azure-storage-blob>=12.19.0
 
