--- a/backend-nest/package.json
+++ b/backend-nest/package.json
@@ -67,6 +67,7 @@
     "@nestjs/testing": "^11.1.13",
     "@types/bull": "^3.15.9",
     "@types/ioredis": "^4.28.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.2.2",
     "@types/redis": "^4.0.10",
     "nodemon": "^3.1.11",
