--- a/backend-nest/package.json
+++ b/backend-nest/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main.js",
+    "start:prod": "npx prisma migrate deploy && node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -42,7 +42,7 @@
     "@nestjs/swagger": "^11.2.6",
     "@nestjs/websockets": "^11.1.13",
     "@prisma/adapter-pg": "^7.3.0",
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "^7.4.0",
     "aws-sdk": "^2.1693.0",
     "axios": "^1.13.5",
     "bull": "^4.16.5",
@@ -54,7 +54,6 @@
     "livekit-server-sdk": "^2.15.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.48.0",
     "pg": "^8.18.0",
-    "prisma": "^7.3.0",
     "redis": "^5.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
@@ -71,6 +70,7 @@
     "@types/node": "^25.2.2",
     "@types/redis": "^4.0.10",
     "nodemon": "^3.1.11",
+    "prisma": "^7.4.0",
     "rimraf": "^6.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
