--- a/backend-nest/package.json
+++ b/backend-nest/package.json
@@ -49,6 +49,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dotenv": "^17.2.4",
+    "form-data": "^4.0.5",
     "ioredis": "^5.9.2",
     "joi": "^18.0.2",
     "livekit-server-sdk": "^2.15.0",
