--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "tsc": "tsc --noEmit",
+    "lint": "echo 'No linter configured yet'"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.19.22",
