--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
           cache-dependency-path: backend-nest/package-lock.json
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm ci --include=dev
 
       - name: Lint
         run: npm run lint
