--- a/backend-nest/package.json
+++ b/backend-nest/package.json
@@ -63,6 +63,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.13",
     "@types/bull": "^3.15.9",
@@ -70,10 +71,18 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^25.2.2",
     "@types/redis": "^4.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
+    "eslint": "^10.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "globals": "^17.3.0",
     "nodemon": "^3.1.11",
+    "prettier": "^3.8.1",
     "prisma": "^7.4.0",
     "rimraf": "^6.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0"
   }
 }
