--- a/backend-nest/package.json
+++ b/backend-nest/package.json
@@ -68,6 +68,7 @@
     "@nestjs/testing": "^11.1.13",
     "@types/bull": "^3.15.9",
     "@types/ioredis": "^4.28.10",
+    "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.2.2",
     "@types/redis": "^4.0.10",
@@ -77,10 +78,12 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "globals": "^17.3.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "prettier": "^3.8.1",
     "prisma": "^7.4.0",
     "rimraf": "^6.1.2",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.56.0"
